# obs_streamdeck_controls

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  sd_controls.ini.example  sd_controls.py  sd_controls.sh  setup.cfg  setup.py
docs/source/: conf.py  contents.rst  index.rst  installation.rst  modules.rst  setup.rst  usage.rst
obs_sd_controls/: cli_entry.py  conf.py  config_mgmt.py  obs_controls.py  text_includes.py  thanks.js  twitch_controls.py
sd_controls/: cli_tools.py  sd_controls.py
src/obs_sd_controls/: conf.py  config_mgmt.py  obs_controls.py  thanks.html  twitch_controls.py
