[metadata]
name = obs_streamdeck_controls
author = DJ Nrrd
author_email = djnrrd@gmail.com
description = A command line tool for controlling OBS Studio via the OBS WebSockets API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/djnrrd/obs_streamdeck_controls
project_urls =
    Bug Tracker = https://github.com/djnrrd/obs_streamdeck_controls/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Environment :: Console
    Topic :: Games/Entertainment
    Topic :: Home Automation

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    simpleobsws==0.0.7
    appdirs
    irc
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    obs-streamdeck-ctl = obs_sd_controls.cli_entry:main